Changes in TeleGNOME 0.3.3
==========================

Changes in TeleGNOME 0.3.2
==========================

 * Fix incorrect description of paging-enabled key.
 * Migrate from gnome-doc-utils to yelp-tools.
 * Port away from gnome-common.
 * Stop using deprecated ACLOCAL_AMFLAGS.
 * Migrate from intltool to Gettext.

Translations:
  cs (Marek Černocký), de (Mario Blättermann), es (Yolanda Álvarez Pérez),
  hu (Balázs Meskó, Gábor Kelemen), oc (Cédric Valmary), pl (Piotr Drąg),
  pt_BR (Rafael Fontenelle), sr (Мирослав Николић), sr@latin (Мирослав
  Николић), sv (Anders Jonsson, Josef Andersson)

Changes in TeleGNOME 0.3.1
==========================

 * Actually install icons.
 * Add AppStream metadata.

Translations:
  de (Mario Blättermann)

Changes in TeleGNOME 0.3.0
==========================

 * Add Italian teletext channel.
 * Rewrite in Vala.

Translations:
  de (Mario Blättermann), es (Daniel Mustieles), it (Guido Trentalancia)

Changes in TeleGNOME 0.2.1
==========================

 * Don't reset current-channel to the first configured channel on startup.
 * Port from libgnome and libgnomeui to less-deprecated equivalents, mostly
   GResource and GtkUIManager.
 * Port from gtk_timeout_* to GLib equivalents.
 * Port from GtkCList to GtkTreeView and friends.
 * Port to new (as of GTK+ 2.4) GtkToolbar API.
 * Port from GdkDrawable to Cairo.
 * Port to GTK+ 3.
 * Basic port to GtkApplication.
 * Port menu action handling from GtkUIManager/GtkAction to GAction/GMenu.
 * Port widget construction code to GtkBuilder.

Translations:
  de (Mario Blättermann), pl (Piotr Drąg)

Changes in TeleGNOME 0.2.0
==========================

 * Build cleanly with -DGSEAL_ENABLE.
 * Port from GnomeVFS to GIO.
 * Port from gnome-config to GSettings.
 * Add some more default channels.
 * Add missing call to gdk_pixbuf_loader_close that caused TeleGNOME to be
   unable to load some images.

Translations:
  bs (Samir Ribic), ca (Toni Cama), el (MarMav, Mel Argyropoulou), en_GB